--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "html-pdf": "^3.0.1",
     "html-pdf-node": "^1.0.8",
+    "moment": "^2.29.4",
     "oracledb": "^5.5.0",
-    "puppeteer": "^19.6.3"
+    "puppeteer": "^19.6.3",
+    "winston": "^3.8.2"
   }
 }
