1차 오류 잡음

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       "request": "launch",
       "name": "프로그램 시작",
       "program": "${workspaceFolder}/index.js",
-      "args": ["2022", ""],
+      "args": ["2022"],
       "env": {
         "NODE_ENV": "development",
         "PORT": "8080",
